# wca_comp_overview

./: Cargo.toml  README.md  styles.css
example_html_files/: competitors_list.html  single_competitor.html
src/: css_generation.rs  data_retrieval.rs  datastructures.rs  html_generation.rs  main.rs  plot.rs  wcoerror.rs
src/data_retrieval/: competitorslist.rs  pr_data_random.rs  pr_data_unofficialapi.rs  pr_data_wcawebsite.rs
static_files/: styles.css
