[package]
name = "wca_comp_overview"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
maud = "0.26.0"
rand = "0.8.5"
re = "0.1.5"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["blocking"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
webbrowser = "0.8.13"
